boxddd-sys/src/bindings_pregenerated.rs

/// zero mass, zero velocity, may be manually moved
pub const b3BodyType_b3_staticBody: b3BodyType = 0;
/// zero mass, velocity set by user, moved by solver
pub const b3BodyType_b3_kinematicBody: b3BodyType = 1;
/// positive mass, velocity determined by forces, moved by solver
pub const b3BodyType_b3_dynamicBody: b3BodyType = 2;
/// number of body types
pub const b3BodyType_b3_bodyTypeCount: b3BodyType = 3;
/** The body simulation type.
 Each body is one of these three types. The type determines how the body behaves in the simulation.
 @ingroup body*/
pub type b3BodyType = ::std::os::raw::c_uint;
/** Motion locks to restrict the body movement
 @ingroup body*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3MotionLocks {
    /// Prevent translation along the x-axis
    pub linearX: bool,
    /// Prevent translation along the y-axis
    pub linearY: bool,
    /// Prevent translation along the z-axis
    pub linearZ: bool,
    /// Prevent rotation around the x-axis
    pub angularX: bool,
    /// Prevent rotation around the y-axis
    pub angularY: bool,
    /// Prevent rotation around the z-axis
    pub angularZ: bool,
}
/** A body definition holds all the data needed to construct a rigid body.
 You can safely re-use body definitions. Shapes are added to a body after construction.
 Body definitions are temporary objects used to bundle creation parameters.
 Must be initialized using b3DefaultBodyDef().
 @ingroup body*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3BodyDef {
    /// The body type: static, kinematic, or dynamic.
    pub type_: b3BodyType,
    /** The initial world position of the body. Bodies should be created with the desired position.
 @note Creating bodies at the origin and then moving them nearly doubles the cost of body creation, especially
 if the body is moved after shapes have been added.*/
    pub position: b3Pos,
    /// The initial world rotation of the body.
    pub rotation: b3Quat,
    /// The initial linear velocity of the body's origin. Usually in meters per second.
    pub linearVelocity: b3Vec3,
    /// The initial angular velocity of the body. Radians per second.
    pub angularVelocity: b3Vec3,
    /** Linear damping is used to reduce the linear velocity. The damping parameter
 can be larger than 1 but the damping effect becomes sensitive to the
 time step when the damping parameter is large.
 Generally linear damping is undesirable because it makes objects move slowly
 as if they are floating.*/
    pub linearDamping: f32,
    /** Angular damping is used to reduce the angular velocity. The damping parameter
 can be larger than 1.0f but the damping effect becomes sensitive to the
 time step when the damping parameter is large.
 Angular damping can be used to slow down rotating bodies.*/
    pub angularDamping: f32,
    /// Scale the gravity applied to this body. Non-dimensional.
    pub gravityScale: f32,
    /// Sleep speed threshold, default is 0.05 meters per second
    pub sleepThreshold: f32,
    /// Optional body name for debugging.
    pub name: *const ::std::os::raw::c_char,
    /// Use this to store application specific body data.
    pub userData: *mut ::std::os::raw::c_void,
    /// Motions locks to restrict linear and angular movement
    pub motionLocks: b3MotionLocks,
    /// Set this flag to false if this body should never fall asleep.
    pub enableSleep: bool,
    /// Is this body initially awake or sleeping?
    pub isAwake: bool,
    /** Treat this body as a high speed object that performs continuous collision detection
 against dynamic and kinematic bodies, but not other bullet bodies.
 @warning Bullets should be used sparingly. They are not a solution for general dynamic-versus-dynamic
 continuous collision. They do not guarantee accurate collision if both bodies are fast moving because
 the bullet does a continuous check after all non-bullet bodies have moved. You could get unlucky and have
 the bullet body end a time step very close to a non-bullet body and the non-bullet body then moves over
 the bullet body. In continuous collision, initial overlap is ignored to avoid freezing bodies in place.
 I do not recommend using them for game projectiles if precise collision timing is needed. Instead consider
 using a ray or shape cast. You can use a marching ray or shape cast for projectile that moves over time.
 If you want a fast moving projectile to collide with a fast moving target, you need to consider the relative
 movement in your ray or shape cast. This is out of the scope of Box3D.
 So what are good use cases for bullets? Pinball games or games with dynamic containers that hold other objects.
 It should be a use case where it doesn't break the game if there is a collision missed, but having them
 captured improves the quality of the game.*/
    pub isBullet: bool,
    /// Used to disable a body. A disabled body does not move or collide.
    pub isEnabled: bool,
    /** This allows this body to bypass rotational speed limits. Should only be used
 for circular objects, like wheels.*/
    pub allowFastRotation: bool,
    /** Enable contact recycling. True by default. Leaving this enabled improves performance
 but may lead to ghost collision that should be avoided on characters.*/
    pub enableContactRecycling: bool,
    /// Used internally to detect a valid definition. DO NOT SET.
    pub internalValue: ::std::os::raw::c_int,
}
unsafe extern "C" {
    /** Use this to initialize your body definition
 @ingroup body*/
    pub fn b3DefaultBodyDef() -> b3BodyDef;
}
/** This is used to filter collision on shapes. It affects shape-vs-shape collision
 and shape-versus-query collision (such as b3World_CastRay).
 @ingroup shape*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Filter {
    /** The collision category bits. Normally you would just set one bit. The category bits should
 represent your application object types. For example:
 @code{.cpp}
 enum MyCategories
 {
    Static  = 0x00000001,
    Dynamic = 0x00000002,
    Debris  = 0x00000004,
    Player  = 0x00000008,
    // etc
 };
 @endcode*/
    pub categoryBits: u64,
    /** The collision mask bits. This states the categories that this
 shape would accept for collision.
 For example, you may want your player to only collide with static objects
 and other players.
 @code{.c}
 maskBits = Static | Player;
 @endcode*/
    pub maskBits: u64,
    /** Collision groups allow a certain group of objects to never collide (negative)
 or always collide (positive). A group index of zero has no effect. Non-zero group filtering
 always wins against the mask bits.
 For example, you may want ragdolls to collide with other ragdolls but you don't want
 ragdoll self-collision. In this case you would give each ragdoll a unique negative group index
 and apply that group index to all shapes on the ragdoll.*/
    pub groupIndex: ::std::os::raw::c_int,
}
unsafe extern "C" {
    /** Use this to initialize your filter
 @ingroup shape*/
    pub fn b3DefaultFilter() -> b3Filter;
}
/** Material properties supported per triangle on meshes and height fields
 @ingroup shape*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SurfaceMaterial {
    /// The Coulomb (dry) friction coefficient, usually in the range [0,1].
    pub friction: f32,
    /** The coefficient of restitution (bounce) usually in the range [0,1].
 https://en.wikipedia.org/wiki/Coefficient_of_restitution*/
    pub restitution: f32,
    /// The rolling resistance usually in the range [0,1]. This is only used for spheres and capsules.
    pub rollingResistance: f32,
    /** The tangent velocity for conveyor belts. This is local to the shape and will be projected
 onto the contact surface.*/
    pub tangentVelocity: b3Vec3,
    /** User material identifier. This is passed with query results and to friction and restitution
 combining functions. It is not used internally.*/
    pub userMaterialId: u64,
    /** Custom debug draw color. Ignored if 0. The low 24 bits are RGB. The high byte may
 carry a b3DebugMaterial preset, see b3MakeDebugColor.
 @see b3HexColor*/
    pub customColor: u32,
    /// Explicit padding. Must be zero.
    pub padding: u32,
}
unsafe extern "C" {
    /** Use this to initialize your surface material
 @ingroup shape*/
    pub fn b3DefaultSurfaceMaterial() -> b3SurfaceMaterial;
}
